# property-records-ai-pipeline

./: .gitignore  README.md  pyproject.toml
assessment_solution/: __init__.py  requirements.txt  run_pattern_analyzer.sh
assessment_solution/outputs/: county_patterns.json  doc_type_mapping.json
assessment_solution/src/: __init__.py  connection_finder.py  llm_classifier.py  pattern_analyzer.py  pdf_analyzer.py  story_generator.py  utils.py
